--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
             text-align: center;
             color: #2c3e50;
         }}
-        .timestamp {{
+        .timestamp, .device-count {{
             text-align: center;
             margin-bottom: 20px;
             color: #555;
@@ -52,6 +52,7 @@
 <body>
     <h1>SmartHome Status</h1>
     <div class="timestamp">{timestamp}</div>
+    <div class="device-count">Anzahl Geräte: {device_count}</div>
     <div class="device-grid">
         {device_html}
     </div>
