show_command update

--- a/smarthome_status.html
+++ b/smarthome_status.html
@@ -50,11 +50,11 @@
     </style>
 </head>
 <body>
-    <h1>SmartHome Status</h1>
-    <div class="timestamp">2025-07-24 17:45:22</div>
-    <div class="device-count">Anzahl Geräte: 6</div>
+    <h1>Smart Home Status</h1>
+    <div class="timestamp">2025-07-30 09:37:32</div>
+    <div class="device-count">Aktuell registrierte Geräte: 9</div>
     <div class="device-grid">
-        <div class='device off'><strong>Thermostat 1</strong> (Thermostat)<br>Status: OFF<br>IP-Adresse: 192.168.0.11<br>Zieltemperatur: 23.0°C<br>Aktuelle Temperatur: None°C<br></div><div class='device off'><strong>Thermostat 2</strong> (Thermostat)<br>Status: OFF<br>IP-Adresse: 192.168.0.12<br>Zieltemperatur: None°C<br>Aktuelle Temperatur: None°C<br></div><div class='device off'><strong>Smarte Beleuchtung 1</strong> (SmartLight)<br>Status: OFF<br>IP-Adresse: 192.168.0.21<br>Helligkeit: 100%<br>Farbe: white<br></div><div class='device off'><strong>Smarte Beleuchtung 2</strong> (SmartLight)<br>Status: OFF<br>IP-Adresse: 192.168.0.22<br>Helligkeit: 100%<br>Farbe: white<br></div><div class='device off'><strong>Sicherheitskamera 1</strong> (SecurityCamera)<br>Status: OFF<br>IP-Adresse: 192.168.0.31<br>Auflösung: 1080p<br>Aufnahme: Inaktiv<br></div><div class='device off'><strong>Sicherheitskamera 2</strong> (SecurityCamera)<br>Status: OFF<br>IP-Adresse: 192.168.0.32<br>Auflösung: 1080p<br>Aufnahme: Inaktiv<br></div>
+        <div class='device on'><strong>Steckdose 1</strong> (Device)<br>Status: ON<br>IP-Adresse: 192.168.0.1<br></div><div class='device on'><strong>Steckdose 2</strong> (Device)<br>Status: ON<br>IP-Adresse: 192.168.0.2<br></div><div class='device on'><strong>Lüfter 1</strong> (Device)<br>Status: ON<br>IP-Adresse: 192.168.0.3<br></div><div class='device on'><strong>Thermostat 1</strong> (Thermostat)<br>Status: ON<br>IP-Adresse: 192.168.0.11<br>Zieltemperatur: None°C<br>Aktuelle Temperatur: None°C<br></div><div class='device on'><strong>Thermostat 2</strong> (Thermostat)<br>Status: ON<br>IP-Adresse: 192.168.0.12<br>Zieltemperatur: None°C<br>Aktuelle Temperatur: None°C<br></div><div class='device on'><strong>Smarte Beleuchtung 1</strong> (SmartLight)<br>Status: ON<br>IP-Adresse: 192.168.0.21<br>Helligkeit: 100%<br>Farbe: white<br></div><div class='device on'><strong>Smarte Beleuchtung 2</strong> (SmartLight)<br>Status: ON<br>IP-Adresse: 192.168.0.22<br>Helligkeit: 100%<br>Farbe: white<br></div><div class='device on'><strong>Sicherheitskamera 1</strong> (SecurityCamera)<br>Status: ON<br>IP-Adresse: 192.168.0.31<br>Auflösung: 1080p<br>Aufnahme: Inaktiv<br></div><div class='device on'><strong>Sicherheitskamera 2</strong> (SecurityCamera)<br>Status: ON<br>IP-Adresse: 192.168.0.32<br>Auflösung: 1080p<br>Aufnahme: Inaktiv<br></div>
     </div>
 </body>
 </html>
