--- a/template.html
+++ b/template.html
@@ -50,9 +50,9 @@
     </style>
 </head>
 <body>
-    <h1>SmartHome Status</h1>
+    <h1>Smart Home Status</h1>
     <div class="timestamp">{timestamp}</div>
-    <div class="device-count">Anzahl Geräte: {device_count}</div>
+    <div class="device-count">Aktuell registrierte Geräte: {active_device_count}</div>
     <div class="device-grid">
         {device_html}
     </div>
